			     BZFlag Release Notes
			     ====================

BZFlag 2.3.0  "Born Again"
----------------------------------------
* Added message type for properly handling /me actions - Scott Wichser
* Added BZDB option to hide flags on radar server side - David Anderson
* Removed /setpass /register /identify - David Anderson
* Handicap is computed on the server - Alfredo Tupone, Bernt Hansen
* Allow plugins to register custom flag types - Daniel Remenak
* Forced *image.bzflag.org for image downloads until user sets
  otherwise - David Anderson
* Accepted patch from McSpider, added OpenFFA - David Anderson
* Removed -requireUDP, now it is always required - David Anderson
* Accepted patch from McSpider, removed client option to turn off fog - David Anderson
* Accepted patch from McSpider, added -noTeamKills option - David Anderson
* Removed -3Dfx, -no3Dfx. Moved -geometry ->  -window <geometry-spec> - David Anderson
* Add ricochet on a per object basis for .bzw files - David Anderson
* serverControl plugin- Add option to ignore observers for server shutdowns
* serverControl plugin- Only report ban file access errors once
* serverControl plugin- Limit filesystem checks to once every 3 seconds
* LogDetail plugin-Add SERVER-MAPNAME with the public server description
* The bzfs -time command line option allows end time - Scott Wichser, Ian Agar
* screenshots now compressed asynchronously - Daniel Remenak, randomparticle
* Add /serverdebug command and plugin API - Bernt Hansen
* Add bzfs -utc command line option to log timestampes universal time - Bernt Hansen
* Fix buffer overrun when using -ts micros on Linux - trepan, Bernt Hansen
* Only players with POLL permission are eligible to vote - Bernt Hansen
* Only allow a single end shot credit for holding the shield flag - Bernt Hansen
* Do not inform hunters of stealthy prey - Ian Agar
* All scores are controlled completely by the server - Daniel Remenak
* Relabel player "email" string as "motto" - Jeff Makey