@@ -1881,15 +1881,21 @@ bool IdListCommand::operator() (const char*, GameKeeper::Player *playerData)
 bool PlayerListCommand::operator() (const char	 *,
 				    GameKeeper::Player *playerData)
 {
+  char reply[MessageLen]    = {0};
+  char hostInfo[MessageLen] = {0};
+
   int t = playerData->getIndex();
   if (!playerData->accessInfo.hasPerm(PlayerAccessInfo::playerList)) {
-    sendMessage(ServerPlayer, t,
-		"You do not have permission to run the playerlist command");
+    if (playerData->player.isPlaying()) {
+      playerData->netHandler->getPlayerList(hostInfo);
+      sprintf(reply, "[%d]%-16s: %s",
+	      t, playerData->player.getCallSign(), hostInfo);
+      sendMessage(ServerPlayer, t, reply);
+    }
     return true;
   }
 
   GameKeeper::Player *otherData;
-  char reply[MessageLen] = {0};
 
   for (int i = 0; i < curMaxPlayers; i++) {
     otherData = GameKeeper::Player::getPlayerByIndex(i);
